--- a/Rules.yml
+++ b/Rules.yml
@@ -1,263 +1,264 @@
 rules:
-- rule:
-  - color: green
-    engine: dfa
+- group: Fingerprint
+  rule:
+  - name: Shiro
     loaded: true
-    name: Shiro
     regex: (=deleteMe|rememberMe=)
-    scope: any
-    sensitive: true
-  - color: green
+    color: green
+    scope: any header
     engine: dfa
+    sensitive: true
+  - name: JSON Web Token
     loaded: true
-    name: JSON Web Token
     regex: (eyJ[A-Za-z0-9_-]{10,}\.[A-Za-z0-9._-]{10,}|eyJ[A-Za-z0-9_\/+-]{10,}\.[A-Za-z0-9._\/+-]{10,})
+    color: green
     scope: any
-    sensitive: true
-  - color: green
     engine: dfa
+    sensitive: true
+  - name: Swagger UI
     loaded: true
-    name: Swagger UI
-    regex: ((swagger-ui.html)|(\"swagger\":)|(Swagger UI)|(swaggerUi))
+    regex: ((swagger-ui.html)|(\"swagger\":)|(Swagger UI)|(swaggerUi)|(swaggerVersion))
+    color: red
     scope: response body
-    sensitive: true
-  - color: green
     engine: dfa
+    sensitive: true
+  - name: Ueditor
     loaded: true
-    name: Ueditor
     regex: (ueditor\.(config|all)\.js)
+    color: green
     scope: response body
+    engine: dfa
     sensitive: true
-  type: Fingerprint
-- rule:
-  - color: yellow
-    engine: nfa
+  - name: F5-BIGIP
     loaded: true
-    name: Email
+    regex: (BIG-IP|F5_ST|F5_HT|F5_fullWT|BigIP|BIGipServerpool|F5LTM|BIGipServer|BIGip)
+    color: cyan
+    scope: response body
+    engine: dfa
+    sensitive: true
+- group: Basic Information
+  rule:
+  - name: Email
+    loaded: true
     regex: (([a-z0-9][_|\.])*[a-z0-9]+@([a-z0-9][-|_|\.])*[a-z0-9]+\.((?!js|css|jpg|jpeg|png|ico)[a-z]{2,}))
+    color: yellow
     scope: response
-    sensitive: false
-  - color: orange
     engine: nfa
+    sensitive: false
+  - name: Chinese IDCard
     loaded: true
-    name: Chinese IDCard
     regex: '[^0-9]((\d{8}(0\d|10|11|12)([0-2]\d|30|31)\d{3}$)|(\d{6}(18|19|20)\d{2}(0[1-9]|10|11|12)([0-2]\d|30|31)\d{3}(\d|X|x)))[^0-9]'
+    color: orange
     scope: response body
-    sensitive: true
-  - color: orange
     engine: nfa
+    sensitive: true
+  - name: Chinese Mobile Number
     loaded: true
-    name: Chinese Mobile Number
     regex: '[^\w]((?:(?:\+|00)86)?1(?:(?:3[\d])|(?:4[5-79])|(?:5[0-35-9])|(?:6[5-7])|(?:7[0-8])|(?:8[\d])|(?:9[189]))\d{8})[^\w]'
+    color: orange
     scope: response body
-    sensitive: true
-  - color: cyan
     engine: nfa
+    sensitive: false
+  - name: Internal IP Address
     loaded: true
-    name: Internal IP Address
     regex: '[^0-9]((127\.0\.0\.1)|(10\.\d{1,3}\.\d{1,3}\.\d{1,3})|(172\.((1[6-9])|(2\d)|(3[01]))\.\d{1,3}\.\d{1,3})|(192\.168\.\d{1,3}\.\d{1,3}))'
+    color: cyan
     scope: response
-    sensitive: true
-  - color: green
     engine: nfa
+    sensitive: true
+  - name: MAC Address
     loaded: true
-    name: MAC Address
     regex: (^([a-fA-F0-9]{2}(:[a-fA-F0-9]{2}){5})|[^a-zA-Z0-9]([a-fA-F0-9]{2}(:[a-fA-F0-9]{2}){5}))
+    color: green
     scope: response
-    sensitive: true
-  - color: orange
     engine: nfa
+    sensitive: true
+  - name: Chinese Bank Card ID
     loaded: false
-    name: Chinese Bank Card ID
     regex: '[^0-9]([1-9]\d{12,18})[^0-9]'
+    color: orange
     scope: response
+    engine: nfa
     sensitive: true
-  type: Basic Information
-- rule:
-  - color: cyan
-    engine: dfa
+- group: Maybe Vulnerability
+  rule:
+  - name: RCE Paramters
     loaded: true
-    name: RCE Paramters
     regex: ((cmd=)|(exec=)|(command=)|(execute=)|(ping=)|(query=)|(jump=)|(code=)|(reg=)|(do=)|(func=)|(arg=)|(option=)|(load=)|(process=)|(step=)|(read=)|(function=)|(feature=)|(exe=)|(module=)|(payload=)|(run=)|(daemon=)|(upload=)|(dir=)|(download=)|(log=)|(ip=)|(cli=))
+    color: cyan
     scope: request
-    sensitive: true
-  - color: yellow
     engine: dfa
+    sensitive: true
+  - name: Java Deserialization
     loaded: true
-    name: Java Deserialization
     regex: (javax\.faces\.ViewState)
-    scope: response
-    sensitive: true
-  - color: cyan
+    color: yellow
+    scope: response body
     engine: dfa
+    sensitive: true
+  - name: Debug Logic Parameters
     loaded: true
-    name: Debug Logic Parameters
     regex: ((access=)|(adm=)|(admin=)|(alter=)|(cfg=)|(clone=)|(config=)|(create=)|(dbg=)|(debug=)|(delete=)|(disable=)|(edit=)|(enable=)|(exec=)|(execute=)|(grant=)|(load=)|(make=)|(modify=)|(rename=)|(reset=)|(root=)|(shell=)|(test=)|(toggl=))
+    color: cyan
     scope: request
+    engine: dfa
     sensitive: true
-  - color: cyan
-    engine: nfa
+  - name: URL As A Value
     loaded: true
-    name: URL As A Value
     regex: (=(https?://.*|https?%3(a|A)%2(f|F)%2(f|F).*))
-    scope: request
+    color: cyan
+    scope: any
+    engine: nfa
     sensitive: true
-  - color: yellow
-    engine: dfa
+  - name: Upload Form
     loaded: true
-    name: Upload Form
     regex: (type=\"file\")
+    color: yellow
     scope: response body
+    engine: dfa
     sensitive: true
-  - color: cyan
-    engine: nfa
+  - name: DoS Paramters
     loaded: true
-    name: DoS Paramters
-    regex: ((size=)|(page=)|(num=))
+    regex: ((size=)|(page=)|(num=)|(limit=)|(start=)|(end=)|(count=))
+    color: cyan
     scope: request
-    sensitive: false
-  - color: yellow
     engine: nfa
+    sensitive: false
+  - name: JSONP Response
     loaded: true
-    name: JSONP Response
     regex: (^(\w.*?)\()
+    color: yellow
     scope: response body
+    engine: nfa
     sensitive: false
-  type: Maybe Vulnerability
-- rule:
-  - color: yellow
-    engine: dfa
+- group: Sensitive Information
+  rule:
+  - name: OSS
     loaded: true
-    name: OSS
-    regex: ([A|a]ccess[K|k]ey[I|i][d|D]|[A|a]ccess[K|k]ey[S|s]ecret)
+    regex: (([A|a]ccess[K|k]ey[I|i][d|D])|([A|a]ccess[K|k]ey[S|s]ecret)|(LTAI))
+    color: yellow
     scope: any
+    engine: dfa
     sensitive: true
-  - color: green
-    engine: nfa
+  - name: SSH Private Key
     loaded: true
-    name: Amazon AWS URL
-    regex: (((([a-zA-Z0-9._-]+\.s3|s3)(\.|\-)+[a-zA-Z0-9._-]+|[a-zA-Z0-9._-]+\.s3|s3)\.amazonaws\.com)|(s3:\/\/[a-zA-Z0-9-\.\_]+)|(s3.console.aws.amazon.com\/s3\/buckets\/[a-zA-Z0-9-\.\_]+)|(amzn\.mws\.[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12})|(ec2-[0-9-]+.cd-[a-z0-9-]+.compute.amazonaws.com)|(us[_-]?east[_-]?1[_-]?elb[_-]?amazonaws[_-]?com))
-    scope: response body
-    sensitive: true
-  - color: green
-    engine: nfa
-    loaded: true
-    name: Amazon AWS AccessKey ID
-    regex: '[^0-9]((aws(.{0,20})?(?-i)[''\"][0-9a-zA-Z\/+]{40}[''\"])|((A3T[A-Z0-9]|AKIA|AGPA|AIDA|AROA|AIPA|ANPA|ANVA|ASIA)[a-zA-Z0-9]{16}))[^0-9]'
-    scope: response body
-    sensitive: true
-  - color: green
-    engine: nfa
-    loaded: true
-    name: Amazon AWS Region
-    regex: ((us(-gov)?|ap|ca|cn|eu|sa)-(central|(north|south)?(east|west)?)-\d)
-    scope: response body
-    sensitive: true
-  - color: blue
-    engine: nfa
-    loaded: true
-    name: SSH Private Key
     regex: ([-]+BEGIN [^\s]+ PRIVATE KEY[-])
+    color: blue
     scope: response body
-    sensitive: true
-  - color: green
     engine: nfa
+    sensitive: true
+  - name: Windows File/Dir Path
     loaded: true
-    name: Windows File/Dir Path
     regex: '[^\w](([a-zA-Z]:\\(?:\w+\\?)*)|([a-zA-Z]:\\(?:\w+\\)*\w+\.\w+))'
+    color: green
     scope: response
-    sensitive: true
-  - color: yellow
     engine: nfa
+    sensitive: true
+  - name: Password Field
     loaded: true
-    name: Password Field
     regex: ((|'|")([p](ass|wd|asswd|assword))(|'|")(:|=)( |)('|")(.*?)('|")(|,))
+    color: yellow
     scope: response body
-    sensitive: false
-  - color: green
     engine: nfa
+    sensitive: false
+  - name: Username Field
     loaded: true
-    name: Username Field
     regex: ((|'|")([u](ser|name|ame|sername))(|'|")(:|=)( |)('|")(.*?)('|")(|,))
+    color: green
     scope: response body
+    engine: nfa
     sensitive: false
-  - color: green
-    engine: dfa
+  - name: WeCom Key
     loaded: true
-    name: WeCom Key
     regex: ([c|C]or[p|P]id|[c|C]orp[s|S]ecret)
+    color: green
     scope: response body
+    engine: dfa
     sensitive: true
-  - color: yellow
-    engine: nfa
+  - name: JDBC Connection
     loaded: true
-    name: JDBC Connection
     regex: (jdbc:[a-z:]+://[a-z0-9\.\-_:;=/@?,&]+)
+    color: yellow
     scope: any
-    sensitive: false
-  - color: yellow
     engine: nfa
+    sensitive: false
+  - name: Authorization Header
     loaded: true
-    name: Authorization Header
     regex: ((basic [a-z0-9=:_\+\/-]{5,100})|(bearer [a-z0-9_.=:_\+\/-]{5,100}))
+    color: yellow
     scope: response body
-    sensitive: false
-  - color: green
     engine: nfa
+    sensitive: false
+  - name: Github Access Token
     loaded: true
-    name: Github Access Token
     regex: ([a-z0-9_-]*:[a-z0-9_\-]+@github\.com*)
+    color: green
     scope: response body
-    sensitive: false
-  - color: cyan
     engine: nfa
+    sensitive: false
+  - name: Microsoft Teams Webhook
     loaded: true
-    name: Microsoft Teams Webhook
     regex: (https://outlook\.office\.com/webhook/[a-z0-9@-]+/IncomingWebhook/[a-z0-9-]+/[a-z0-9-]+)
+    color: cyan
     scope: response body
-    sensitive: false
-  - color: cyan
     engine: nfa
+    sensitive: false
+  - name: Zoho Webhook
     loaded: true
-    name: Zoho Webhook
     regex: (https://creator\.zoho\.com/api/[a-z0-9/_.-]+\?authtoken=[a-z0-9]+)
+    color: cyan
     scope: response body
-    sensitive: false
-  - color: cyan
     engine: nfa
+    sensitive: false
+  - name: Sonarqube Token
     loaded: true
-    name: Sonarqube Token
     regex: (sonar.{0,50}(?:"|\'|`)?[0-9a-f]{40}(?:"|\'|`)?)
+    color: cyan
     scope: response body
+    engine: nfa
     sensitive: false
-  type: Sensitive Information
-- rule:
-  - color: gray
+  - name: Sensitive Field
+    loaded: true
+    regex: ((|'|")([\w]{0,10})((key)|(secret)|(token)|(config)|(auth))(|'|")(:|=)(
+      |)('|")(.*?)('|")(|,))
+    color: yellow
+    scope: response
     engine: nfa
+    sensitive: false
+- group: Other
+  rule:
+  - name: Linkfinder
     loaded: true
-    name: Linkfinder
-    regex: (?:"|')(((?:[a-zA-Z]{1,10}://|//)[^"'/]{1,}\.[a-zA-Z]{2,}[^"']{0,})|((?:/|\.\./|\./)[^"'><,;|*()(%%$^/\\\[\]][^"'><,;|()]{1,})|([a-zA-Z0-9_\-/]{1,}/[a-zA-Z0-9_\-/]{1,}\.(?:[a-zA-Z]{1,4}|action)(?:[\?|#][^"|']{0,}|))|([a-zA-Z0-9_\-/]{1,}/[a-zA-Z0-9_\-/]{3,}(?:[\?|#][^"|']{0,}|))|([a-zA-Z0-9_\-]{1,}\.(?:php|asp|aspx|jsp|json|action|html|js|txt|xml)(?:[\?|#][^"|']{0,}|)))(?:"|')
+    regex: (?:"|')(((?:[a-zA-Z]{1,10}://|//)[^"'/]{1,}\.[a-zA-Z]{2,}[^"']{0,})|((?:/|\.\./|\./)[^"'><,;|*()(%%$^/\\\[\]][^"'><,;|()]{1,})|([a-zA-Z0-9_\-/]{1,}/[a-zA-Z0-9_\-/]{1,}\.(?:[a-zA-Z]{1,4}|action)(?:[\?|#][^"|']{0,}|))|([a-zA-Z0-9_\-/]{1,}/[a-zA-Z0-9_\-/]{3,}(?:[\?|#][^"|']{0,}|))|([a-zA-Z0-9_\-]{1,}\.(?:\w)(?:[\?|#][^"|']{0,}|)))(?:"|')
+    color: gray
     scope: response body
+    engine: nfa
     sensitive: true
-  - color: pink
-    engine: dfa
+  - name: Source Map
     loaded: true
-    name: Source Map
     regex: (\.js\.map)
+    color: pink
     scope: response body
-    sensitive: true
-  - color: magenta
-    engine: nfa
-    loaded: true
-    name: HTML Notes
-    regex: (<!--[\s\S]*?-->)
-    scope: response body
-    sensitive: true
-  - color: green
     engine: dfa
-    loaded: true
-    name: Create Script
-    regex: (createElement\(\"script\"\))
-    scope: response body
     sensitive: true
-  type: Other
+  - name: HTML Notes
+    loaded: true
+    regex: (<!--[\s\S]*?-->)
+    color: magenta
+    scope: response body
+    engine: nfa
+    sensitive: true
+  - name: Create Script
+    loaded: true
+    regex: (createElement\(\"script\"\))
+    color: green
+    scope: response body
+    engine: dfa
+    sensitive: true
+  - name: URL Schemes
+    loaded: true
+    regex: (?![http]|[https])(([-A-Za-z0-9]{1,20})://[-A-Za-z0-9+&@#/%?=~_|!:,.;]+[-A-Za-z0-9+&@#/%=~_|])
+    color: yellow
+    scope: response body
+    engine: nfa
+    sensitive: true
