--- a/Rules.yml
+++ b/Rules.yml
@@ -3,117 +3,140 @@ rules:
   rule:
   - name: Shiro
     loaded: true
-    regex: (=deleteMe|rememberMe=)
+    f_regex: (=deleteMe|rememberMe=)
+    s_regex: ''
+    format: '{0}'
     color: green
     scope: any header
     engine: dfa
     sensitive: true
   - name: JSON Web Token
     loaded: true
-    regex: (eyJ[A-Za-z0-9_-]{10,}\.[A-Za-z0-9._-]{10,}|eyJ[A-Za-z0-9_\/+-]{10,}\.[A-Za-z0-9._\/+-]{10,})
+    f_regex: (eyJ[A-Za-z0-9_-]{10,}\.[A-Za-z0-9._-]{10,}|eyJ[A-Za-z0-9_\/+-]{10,}\.[A-Za-z0-9._\/+-]{10,})
+    s_regex: ''
+    format: '{0}'
     color: green
     scope: any
     engine: dfa
     sensitive: true
   - name: Swagger UI
     loaded: true
-    regex: ((swagger-ui.html)|(\"swagger\":)|(Swagger UI)|(swaggerUi)|(swaggerVersion))
+    f_regex: ((swagger-ui.html)|(\"swagger\":)|(Swagger UI)|(swaggerUi)|(swaggerVersion))
+    s_regex: ''
+    format: '{0}'
     color: red
     scope: response body
     engine: dfa
     sensitive: true
   - name: Ueditor
     loaded: true
-    regex: (ueditor\.(config|all)\.js)
+    f_regex: (ueditor\.(config|all)\.js)
+    s_regex: ''
+    format: '{0}'
     color: green
+    scope: response body
+    engine: dfa
+    sensitive: true
+  - name: Druid
+    loaded: true
+    f_regex: (Druid Stat Index)
+    s_regex: ''
+    format: '{0}'
+    color: orange
     scope: response body
     engine: dfa
     sensitive: true
 - group: Maybe Vulnerability
   rule:
-  - name: RCE Paramters
-    loaded: true
-    regex: ((cmd=)|(exec=)|(command=)|(execute=)|(ping=)|(query=)|(jump=)|(code=)|(reg=)|(do=)|(func=)|(arg=)|(option=)|(load=)|(process=)|(step=)|(read=)|(function=)|(feature=)|(exe=)|(module=)|(payload=)|(run=)|(daemon=)|(upload=)|(dir=)|(download=)|(log=)|(ip=)|(cli=))
-    color: cyan
-    scope: request
-    engine: dfa
-    sensitive: true
   - name: Java Deserialization
     loaded: true
-    regex: (javax\.faces\.ViewState)
+    f_regex: (javax\.faces\.ViewState)
+    s_regex: ''
+    format: '{0}'
     color: yellow
     scope: response body
     engine: dfa
-    sensitive: true
+    sensitive: false
   - name: Debug Logic Parameters
     loaded: true
-    regex: ((access=)|(adm=)|(admin=)|(alter=)|(cfg=)|(clone=)|(config=)|(create=)|(dbg=)|(debug=)|(delete=)|(disable=)|(edit=)|(enable=)|(exec=)|(execute=)|(grant=)|(load=)|(make=)|(modify=)|(rename=)|(reset=)|(root=)|(shell=)|(test=)|(toggl=))
+    f_regex: ((access=)|(adm=)|(admin=)|(alter=)|(cfg=)|(clone=)|(config=)|(create=)|(dbg=)|(debug=)|(delete=)|(disable=)|(edit=)|(enable=)|(exec=)|(execute=)|(grant=)|(load=)|(make=)|(modify=)|(rename=)|(reset=)|(root=)|(shell=)|(test=)|(toggl=))
+    s_regex: ''
+    format: '{0}'
     color: cyan
     scope: request
     engine: dfa
-    sensitive: true
+    sensitive: false
   - name: URL As A Value
     loaded: true
-    regex: (=(https?)(://|%3a%2f%2f))
+    f_regex: (=(https?)(://|%3a%2f%2f))
+    s_regex: ''
+    format: '{0}'
     color: cyan
     scope: any
     engine: nfa
     sensitive: false
   - name: Upload Form
     loaded: true
-    regex: (type=\"file\")
+    f_regex: (type=\"file\")
+    s_regex: ''
+    format: '{0}'
     color: yellow
     scope: response body
     engine: dfa
-    sensitive: true
+    sensitive: false
   - name: DoS Paramters
     loaded: true
-    regex: ((size=)|(page=)|(num=)|(limit=)|(start=)|(end=)|(count=))
+    f_regex: ((size=)|(page=)|(num=)|(limit=)|(start=)|(end=)|(count=))
+    s_regex: ''
+    format: '{0}'
     color: cyan
     scope: request
-    engine: nfa
+    engine: dfa
     sensitive: false
 - group: Basic Information
   rule:
   - name: Email
     loaded: true
-    regex: (([a-z0-9][_|\.])*[a-z0-9]+@([a-z0-9][-|_|\.])*[a-z0-9]+\.((?!js|css|jpg|jpeg|png|ico)[a-z]{2,}))
+    f_regex: (([a-z0-9][_|\.])*[a-z0-9]+@([a-z0-9][-|_|\.])*[a-z0-9]+\.((?!js|css|jpg|jpeg|png|ico)[a-z]{2,}))
+    s_regex: ''
+    format: '{0}'
     color: yellow
     scope: response
     engine: nfa
     sensitive: false
   - name: Chinese IDCard
     loaded: true
-    regex: '[^0-9]((\d{8}(0\d|10|11|12)([0-2]\d|30|31)\d{3}$)|(\d{6}(18|19|20)\d{2}(0[1-9]|10|11|12)([0-2]\d|30|31)\d{3}(\d|X|x)))[^0-9]'
+    f_regex: '[^0-9]((\d{8}(0\d|10|11|12)([0-2]\d|30|31)\d{3}$)|(\d{6}(18|19|20)\d{2}(0[1-9]|10|11|12)([0-2]\d|30|31)\d{3}(\d|X|x)))[^0-9]'
+    s_regex: ''
+    format: '{0}'
     color: orange
     scope: response body
     engine: nfa
     sensitive: true
   - name: Chinese Mobile Number
     loaded: true
-    regex: '[^\w]((?:(?:\+|00)86)?1(?:(?:3[\d])|(?:4[5-79])|(?:5[0-35-9])|(?:6[5-7])|(?:7[0-8])|(?:8[\d])|(?:9[189]))\d{8})[^\w]'
+    f_regex: '[^\w]((?:(?:\+|00)86)?1(?:(?:3[\d])|(?:4[5-79])|(?:5[0-35-9])|(?:6[5-7])|(?:7[0-8])|(?:8[\d])|(?:9[189]))\d{8})[^\w]'
+    s_regex: ''
+    format: '{0}'
     color: orange
     scope: response body
     engine: nfa
     sensitive: false
   - name: Internal IP Address
     loaded: true
-    regex: '[^0-9]((127\.0\.0\.1)|(10\.\d{1,3}\.\d{1,3}\.\d{1,3})|(172\.((1[6-9])|(2\d)|(3[01]))\.\d{1,3}\.\d{1,3})|(192\.168\.\d{1,3}\.\d{1,3}))'
+    f_regex: '[^0-9]((127\.0\.0\.1)|(10\.\d{1,3}\.\d{1,3}\.\d{1,3})|(172\.((1[6-9])|(2\d)|(3[01]))\.\d{1,3}\.\d{1,3})|(192\.168\.\d{1,3}\.\d{1,3}))'
+    s_regex: ''
+    format: '{0}'
     color: cyan
     scope: response
     engine: nfa
     sensitive: true
   - name: MAC Address
     loaded: true
-    regex: (^([a-fA-F0-9]{2}(:[a-fA-F0-9]{2}){5})|[^a-zA-Z0-9]([a-fA-F0-9]{2}(:[a-fA-F0-9]{2}){5}))
+    f_regex: (^([a-fA-F0-9]{2}(:[a-fA-F0-9]{2}){5})|[^a-zA-Z0-9]([a-fA-F0-9]{2}(:[a-fA-F0-9]{2}){5}))
+    s_regex: ''
+    format: '{0}'
     color: green
-    scope: response
-    engine: nfa
-    sensitive: true
-  - name: Chinese Bank Card ID
-    loaded: false
-    regex: '[^0-9]([1-9]\d{12,18})[^0-9]'
-    color: orange
     scope: response
     engine: nfa
     sensitive: true
@@ -121,64 +144,75 @@ rules:
   rule:
   - name: Cloud Key
     loaded: true
-    regex: ((accesskeyid)|(accesskeysecret)|(LTAI[a-z0-9]{12,20}))
+    f_regex: (((access)(|-|_)(key)(|-|_)(id|secret))|(LTAI[a-z0-9]{12,20}))
+    s_regex: ''
+    format: '{0}'
     color: yellow
     scope: any
     engine: nfa
     sensitive: false
   - name: Windows File/Dir Path
     loaded: true
-    regex: '[^\w](([a-zA-Z]:\\(?:\w+\\?)*)|([a-zA-Z]:\\(?:\w+\\)*\w+\.\w+))'
+    f_regex: '[^\w](([a-zA-Z]:\\(?:\w+\\?)*)|([a-zA-Z]:\\(?:\w+\\)*\w+\.\w+))'
+    s_regex: ''
+    format: '{0}'
     color: green
     scope: response
     engine: nfa
     sensitive: true
   - name: Password Field
     loaded: true
-    regex: ((|'|")([p](ass|wd|asswd|assword))(|'|")(:|=)( |)('|")(.*?)('|")(|,))
+    f_regex: ((|'|")(|[\w]{1,10})([p](ass|wd|asswd|assword))(|[\w]{1,10})(|'|")(:|=)(
+      |)('|")(.*?)('|")(|,))
+    s_regex: ''
+    format: '{0}'
     color: yellow
     scope: response body
     engine: nfa
     sensitive: false
   - name: Username Field
     loaded: true
-    regex: ((|'|")(([u](ser|name|ame|sername))|(account))(|'|")(:|=)( |)('|")(.*?)('|")(|,))
+    f_regex: ((|'|")(|[\w]{1,10})(([u](ser|name|sername))|(account)|((creat|updat)(|ed|or|er)(|by|on|at)))(|[\w]{1,10})(|'|")(:|=)(
+      |)('|")(.*?)('|")(|,))
+    s_regex: ''
+    format: '{0}'
     color: green
     scope: response body
     engine: nfa
     sensitive: false
   - name: WeCom Key
     loaded: true
-    regex: ([c|C]or[p|P]id|[c|C]orp[s|S]ecret)
+    f_regex: ((corp)(id|secret))
+    s_regex: ''
+    format: '{0}'
     color: green
     scope: response body
     engine: dfa
-    sensitive: true
+    sensitive: false
   - name: JDBC Connection
     loaded: true
-    regex: (jdbc:[a-z:]+://[a-z0-9\.\-_:;=/@?,&]+)
+    f_regex: (jdbc:[a-z:]+://[a-z0-9\.\-_:;=/@?,&]+)
+    s_regex: ''
+    format: '{0}'
     color: yellow
     scope: any
     engine: nfa
     sensitive: false
   - name: Authorization Header
     loaded: true
-    regex: ((basic [a-z0-9=:_\+\/-]{5,100})|(bearer [a-z0-9_.=:_\+\/-]{5,100}))
+    f_regex: ((basic [a-z0-9=:_\+\/-]{5,100})|(bearer [a-z0-9_.=:_\+\/-]{5,100}))
+    s_regex: ''
+    format: '{0}'
     color: yellow
-    scope: response body
-    engine: nfa
-    sensitive: false
-  - name: Github Access Token
-    loaded: true
-    regex: ([a-z0-9_-]*:[a-z0-9_\-]+@github\.com*)
-    color: green
     scope: response body
     engine: nfa
     sensitive: false
   - name: Sensitive Field
     loaded: true
-    regex: ((|'|")([\w]{0,10})((key)|(secret)|(token)|(config)|(auth)|(access)|(admin))(|'|")(:|=)(
-      |)('|")(.*?)('|")(|,))
+    f_regex: ((\[)?('|")?([\w]{0,10})((key)|(secret)|(token)|(config)|(auth)|(access)|(admin))([\w]{0,10})('|")?(\])?(
+      |)(:|=)( |)('|")(.*?)('|")(|,))
+    s_regex: ''
+    format: '{0}'
     color: yellow
     scope: response
     engine: nfa
@@ -187,36 +221,64 @@ rules:
   rule:
   - name: Linkfinder
     loaded: true
-    regex: (?:"|')(((?:[a-zA-Z]{1,10}://|//)[^"'/]{1,}\.[a-zA-Z]{2,}[^"']{0,})|((?:/|\.\./|\./)[^"'><,;|*()(%%$^/\\\[\]][^"'><,;|()]{1,})|([a-zA-Z0-9_\-/]{1,}/[a-zA-Z0-9_\-/]{1,}\.(?:[a-zA-Z]{1,4}|action)(?:[\?|#][^"|']{0,}|))|([a-zA-Z0-9_\-/]{1,}/[a-zA-Z0-9_\-/]{3,}(?:[\?|#][^"|']{0,}|))|([a-zA-Z0-9_\-]{1,}\.(?:\w)(?:[\?|#][^"|']{0,}|)))(?:"|')
+    f_regex: (?:"|')(((?:[a-zA-Z]{1,10}://|//)[^"'/]{1,}\.[a-zA-Z]{2,}[^"']{0,})|((?:/|\.\./|\./)[^"'><,;|*()(%%$^/\\\[\]][^"'><,;|()]{1,})|([a-zA-Z0-9_\-/]{1,}/[a-zA-Z0-9_\-/]{1,}\.(?:[a-zA-Z]{1,4}|action)(?:[\?|#][^"|']{0,}|))|([a-zA-Z0-9_\-/]{1,}/[a-zA-Z0-9_\-/]{3,}(?:[\?|#][^"|']{0,}|))|([a-zA-Z0-9_\-]{1,}\.(?:\w)(?:[\?|#][^"|']{0,}|)))(?:"|')
+    s_regex: ''
+    format: '{0}'
     color: gray
     scope: response body
     engine: nfa
     sensitive: true
   - name: Source Map
     loaded: true
-    regex: (\.js\.map)
+    f_regex: (\.js\.map)
+    s_regex: ''
+    format: '{0}'
     color: pink
     scope: response body
     engine: dfa
-    sensitive: true
+    sensitive: false
   - name: HTML Notes
     loaded: true
-    regex: (<!--[\s\S]*?-->)
+    f_regex: (<!--.*?-->)
+    s_regex: ''
+    format: '{0}'
     color: magenta
     scope: response body
     engine: nfa
-    sensitive: true
+    sensitive: false
   - name: Create Script
     loaded: true
-    regex: (createElement\(\"script\"\))
+    f_regex: (\+\{.*?\}\[[a-zA-Z]\]\+".*?\.js")
+    s_regex: '"?([\w].*?)"?:"(.*?)"'
+    format: '{0}.{1}'
     color: green
     scope: response body
-    engine: dfa
-    sensitive: true
+    engine: nfa
+    sensitive: false
   - name: URL Schemes
     loaded: true
-    regex: (?![http]|[https])(([-A-Za-z0-9]{1,20})://[-A-Za-z0-9+&@#/%?=~_|!:,.;]+[-A-Za-z0-9+&@#/%=~_|])
+    f_regex: ((?![http]|[https])(([-A-Za-z0-9]{1,20})://[-A-Za-z0-9+&@#/%?=~_|!:,.;]+[-A-Za-z0-9+&@#/%=~_|]))
+    s_regex: ''
+    format: '{0}'
     color: yellow
     scope: response body
     engine: nfa
-    sensitive: true
+    sensitive: false
+  - name: Router Push
+    loaded: true
+    f_regex: (\$router\.push)
+    s_regex: ''
+    format: '{0}'
+    color: magenta
+    scope: response body
+    engine: dfa
+    sensitive: false
+  - name: Vue Route
+    loaded: true
+    f_regex: path:"(.*?)"
+    s_regex: ''
+    format: '{0}'
+    color: gray
+    scope: response body
+    engine: nfa
+    sensitive: false
